--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "rollup": "^0.41.6",
     "awesome-typescript-loader": "^3.1.3"
   },
+  "devDependencies": {
+    "lodash": "*",
+    "babel-core": "*",
+    "typescript": "*",
+    "eslint": "*",
+    "flowtype": "*",
+    "nyc": "*",
+    "babel-register": "*"
+  },
   "engines": {
     "node": ">= 7.9.0"
   },
@@ -22,7 +31,8 @@
     "benchmarks",
     "fusebox",
     "rollup",
-    "webpack"
+    "webpack",
+    "faker"
   ],
   "author": "James <aretecode@gmail.com>",
   "homepage": "https://github.com/aretecode/bundler-benchmarks#readme",
