🏋️📇📜 update pkg, bench data, &✚ require bench

--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "bundler-benchmarks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "benchmark rollup, webpack, fusebox",
   "main": "src/index.js",
   "dependencies": {
+    "@types/node": "^7.0.8",
+    "awesome-typescript-loader": "^3.1.3",
     "bench-chain": "*",
     "faker": "^4.1.0",
+    "file-chain": "0.0.3",
     "flipfile": "*",
     "flipflag": "*",
     "fliplog": "*",
     "fliptime": "*",
-    "webpack": "^2.4.1",
+    "funwithflags": "^1.0.2",
     "fuse-box": "^2.0.0-beta.7",
+    "likeaboss": "^0.1.3",
     "rollup": "^0.41.6",
-    "awesome-typescript-loader": "^3.1.3"
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "typescript": "^2.2.1",
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "lodash": "*",
     "babel-core": "*",
-    "typescript": "*",
     "eslint": "*",
     "flowtype": "*",
     "nyc": "*",
