--- a/package.json
+++ b/package.json
@@ -6,34 +6,39 @@
   "dependencies": {
     "@types/node": "^7.0.8",
     "awesome-typescript-loader": "^3.1.3",
-    "bench-chain": "*",
+    "bench-chain": "^0.4.0",
     "faker": "^4.1.0",
     "file-chain": "0.0.3",
     "flipfile": "*",
-    "flipflag": "*",
     "fliplog": "*",
     "fliptime": "*",
     "funwithflags": "^1.0.2",
-    "fuse-box": "^2.0.0-beta.7",
+    "fuse-box": "^2.0.0-beta.9",
     "likeaboss": "^0.1.3",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "typescript": "^2.2.1",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "webpack-node-externals": "^1.5.4"
   },
   "devDependencies": {
-    "lodash": "*",
     "babel-core": "*",
+    "babel-register": "*",
     "eslint": "*",
     "flowtype": "*",
+    "fosho": "0.0.12",
+    "lodash": "*",
     "nyc": "*",
-    "babel-register": "*"
+    "react": "^15.5.4",
+    "rollup-plugin-json": "^2.1.1"
   },
   "engines": {
     "node": ">= 7.9.0"
   },
   "keywords": [
+    "fluent",
+    "async",
     "benchmarks",
     "fusebox",
     "rollup",
