--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "awesome-typescript-loader": "^3.1.3",
     "bench-chain": "^0.4.3",
     "faker": "^4.1.0",
-    "file-chain": "0.0.3",
     "flipfile": "*",
-    "fliplog": "*",
+    "fliplog": "^0.2.5",
     "fliptime": "*",
     "funwithflags": "^1.0.2",
-    "fuse-box": "^2.0.0-beta.10",
-    "likeaboss": "^0.1.3",
+    "fuse-box": "^2.0.0-beta.14",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
@@ -33,7 +31,7 @@
     "react": "^15.5.4",
     "rollup-plugin-json": "^2.1.1"
   },
-  "engines": {
+  "_engines": {
     "node": ">= 7.9.0"
   },
   "keywords": [
