--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
+  "fliplog": [
+    "cli"
+  ],
   "name": "bundler-benchmarks",
-  "version": "0.0.2",
-  "description": "benchmark rollup, webpack, fusebox",
+  "version": "0.0.3",
+  "description": "benchmark rollup, webpack, fusebox, (later browserify)",
   "main": "src/index.js",
+  "scripts": {
+    "bench": "node bench-es5 && node bench-es6 && node bench-ts && node bench-small && node bench-require && node bench-deps && node bench-depsheavy && node-bench-xs"
+  },
+  "optionalDependencies": {
+    "microtime": "*",
+    "node-sass": "*",
+    "fsevents": "*"
+  },
   "dependencies": {
     "@types/node": "^7.0.8",
     "awesome-typescript-loader": "^3.1.3",
-    "bench-chain": "^0.4.3",
+    "bench-chain": "nomicro",
+    "browserify": "^14.3.0",
     "faker": "^4.1.0",
     "flipfile": "*",
-    "fliplog": "^0.2.5",
-    "fliptime": "*",
+    "fliplog": "^0.2.6",
+    "fliptime": "^3.0.2",
     "funwithflags": "^1.0.2",
     "fuse-box": "^2.0.0-beta.14",
     "rollup": "^0.41.6",
@@ -24,6 +36,7 @@
     "babel-core": "*",
     "babel-register": "*",
     "eslint": "*",
+    "file-chain": "0.0.3",
     "flowtype": "*",
     "fosho": "0.0.12",
     "lodash": "*",
@@ -31,7 +44,7 @@
     "react": "^15.5.4",
     "rollup-plugin-json": "^2.1.1"
   },
-  "_engines": {
+  "engines": {
     "node": ">= 7.9.0"
   },
   "keywords": [
@@ -43,6 +56,7 @@
     "webpack",
     "faker"
   ],
+  "license": "MIT",
   "author": "James <aretecode@gmail.com>",
   "homepage": "https://github.com/aretecode/bundler-benchmarks#readme",
   "repository": {
